[fix]: label overflow

--- a/src/components/Board/UI/Styles/Card.css
+++ b/src/components/Board/UI/Styles/Card.css
@@ -77,6 +77,7 @@
 
 .card_label {
   display: flex;
+  align-items: flex-start;
   width: 100%;
   /* margin: 0 1rem 0.2rem; */
   padding: 0.4rem;
